--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,4 @@
-sonar.projectKey=sidharthjain
+sonar.projectKey=sidharthjain-zemoso_angular-course-project
 sonar.organization=sidharthjain-zemoso
 
 # This is the name and version displayed in the SonarCloud UI.
@@ -10,3 +10,15 @@ sonar.organization=sidharthjain-zemoso
 
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
+
+sonar.host.url = https://sonarcloud.io
+sonar.projectVersion=1.0
+sonar.sourceEncoding=UTF-8
+
+sonar.sources=src
+sonar.tests=src
+sonar.exclusions=**/*.spec.ts,**/*test.ts,**/*.js
+sonar.test.inclusions=**/*.spec.ts,**/*test.ts
+sonar.coverage.exclusions=**/*.js,src/main.ts,src/polyfills.ts,**/*environment*.ts,**/*module.ts
+
+sonar.javascript.lcov.reportPaths=./coverage/report-lcov/lcov.info
